fix: attempt to fix hover shadow on safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -89,7 +89,7 @@ svg {
 
     svg:hover {
         color: #CFD6F7;
-        filter: drop-shadow(0px 0px 25px rgba(207, 214, 247, 0.5));
+        filter: drop-shadow(0px 0px .35em rgba(207, 214, 247, 0.5));
     }
 
     a:hover {
